8139210: JavaFX rendering glitch when rendering many Paths using HW pipeline

Reviewed-by: ckyang