modules/graphics/src/main/java/com/sun/prism/es2/GLContext.java
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2014, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2015, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -224,8 +224,6 @@ abstract class GLContext {
     private static native void nDisableVertexAttributes(long nativeCtxInfo);
     private static native void nDrawIndexedQuads(long nativeCtxInfo, int numVertices,
             float dataf[], byte datab[]);
-    private static native void nDrawTriangleList(long nativeCtxInfo, int numTriangles,
-            float fData[], byte cData[]);
     private static native int nCreateIndexBuffer16(long nativeCtxInfo, short data[], int n);
     private static native void nSetIndexBuffer(long nativeCtxInfo, int buffer);
 
@@ -722,10 +720,6 @@ abstract class GLContext {
 
     void drawIndexedQuads(float coords[], byte colors[], int numVertices) {
         nDrawIndexedQuads(nativeCtxInfo, numVertices, coords, colors);
-    }
-
-    void drawTriangleList(int numTriangles, float fData[], byte cData[]) {
-        nDrawTriangleList(nativeCtxInfo, numTriangles, fData, cData);
     }
 
     int createIndexBuffer16(short data[]) {
