modules/graphics/src/main/java/com/sun/prism/null3d/DummyContext.java
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2015, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -41,7 +41,10 @@ class DummyContext extends BaseShaderContext {
     private State state;
 
     DummyContext(Screen screen, DummyResourceFactory factory) {
-        super(screen, factory, new DummyVertexBuffer(32));
+        super(screen, factory, 32);
+    }
+
+    protected void renderQuads(float coordArray[], byte colorArray[], int numVertices) {
     }
 
     @Override
