modules/graphics/src/test/java/test/com/sun/javafx/sg/prism/TestGraphics.java
@@ -53,7 +53,6 @@ import com.sun.prism.Texture.WrapMode;
 import com.sun.prism.impl.BaseContext;
 import com.sun.prism.impl.BaseGraphics;
 import com.sun.prism.impl.TextureResourcePool;
-import com.sun.prism.impl.VertexBuffer;
 import com.sun.prism.paint.Color;
 import com.sun.prism.shape.ShapeRep;
 
@@ -149,7 +148,11 @@ public class TestGraphics extends BaseGraphics {
     private static class TestContext extends BaseContext {
 
         public TestContext() {
-            super(null, new TestResourceFactory(), null);
+            super(null, new TestResourceFactory(), 32);
+        }
+
+        @Override
+        protected void renderQuads(float[] coordArray, byte[] colorArray, int numVertices) {
         }
 
         @Override
@@ -247,7 +250,6 @@ public class TestGraphics extends BaseGraphics {
             };
         }
         @Override public Presentable createPresentable(PresentableState pstate) { return null; }
-        @Override public VertexBuffer createVertexBuffer(int maxQuads) { return null; }
         @Override public ShapeRep createPathRep() { return null; }
         @Override public ShapeRep createRoundRectRep() { return null; }
         @Override public ShapeRep createEllipseRep() { return null; }
